--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <div class="card-container" style="width: 25rem">
             <div class="card-image">
-                <img src="/img/illustration-hero.svg" alt="" />
+                <img src="./img/illustration-hero.svg" alt="" />
             </div>
             <div class="card-content">
                 <div class="card-title">
@@ -32,7 +32,7 @@
             </div>
             <div class="container-plan">
                 <div class="container-plan-img">
-                    <img src="/img/icon-music.svg" alt="" />
+                    <img src="./img/icon-music.svg" alt="" />
                 </div>
                 <div class="contaienr-plan-content">
                     <strong><p>Annual Plan</p></strong>
